@@ -5,6 +5,7 @@ import com.company.creditscheduler.reports.service.ReportExecutionService;
 import com.company.creditscheduler.scheduler.registry.JobRegistry;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
@@ -31,7 +32,7 @@ public class JobsController {
                         "enabled", job.isEnabled(),
                         "cron", job.getCron(),
                         "reportId", job.getReportInput().getReportId()))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @GetMapping("/{jobName}")
